--- a/dot_config/alacritty/alacritty.yml
+++ b/dot_config/alacritty/alacritty.yml
@@ -63,6 +63,10 @@ window:
   #     - buttonless: Title bar, transparent background and no title bar buttons
   decorations: none
 
+  # Window opacity as a floating point number from `0.0` to `1.0`.
+  # The value `0.0` is completely transparent and `1.0` is opaque.
+  opacity: 0.8
+
   # Startup Mode (changes require restart)
   #
   # Values for `startup_mode`:
@@ -321,12 +325,6 @@ colors:
   #     args: ["Hello, World!"]
   #
   command: None
-
-# Background opacity
-#
-# Window opacity as a floating point number from `0.0` to `1.0`.
-# The value `0.0` is completely transparent and `1.0` is opaque.
-window_opacity: 0.8
 
 selection:
   # This string contains all characters that are used as separators for
