add jq and ag to brewfile

--- a/dot_config/brewfile/Brewfile
+++ b/dot_config/brewfile/Brewfile
@@ -3,6 +3,7 @@ tap "homebrew/cask"
 tap "homebrew/core"
 tap "xwmx/taps"
 brew "ack"
+brew "ag"
 brew "antigen"
 brew "azure-cli"
 brew "bat"
@@ -12,6 +13,7 @@ brew "exa"
 brew "gnupg"
 brew "grep"
 brew "hyperkit"
+brew "jq"
 brew "nmap"
 brew "openjdk"
 brew "pandoc"
