add bazelisk and pyenv to brewfile

--- a/dot_config/brewfile/Brewfile
+++ b/dot_config/brewfile/Brewfile
@@ -7,6 +7,7 @@ brew "ag"
 brew "antigen"
 brew "azure-cli"
 brew "bat"
+brew "bazelisk"
 brew "catimg"
 brew "direnv"
 brew "exa"
@@ -18,6 +19,7 @@ brew "nmap"
 brew "openjdk"
 brew "pandoc"
 brew "podman"
+brew "pyenv"
 brew "rbenv"
 brew "ripgrep"
 brew "ripgrep-all"
