--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -5,6 +5,9 @@ README.md
 .config/polybar
 .config/sxhkd
 {{- end }}
+{{ if ne .chezmoi.osRelease.id "arch" -}}
+.config/yay/pkglist.txt
+{{- end }}
 {{- if ne .chezmoi.os "darwin" }}
 .config/brewfile/Brewfile
 {{- end  }}
