add settings for nvim skhdrc and yabai

--- a/dot_config/brewfile/Brewfile
+++ b/dot_config/brewfile/Brewfile
@@ -25,9 +25,12 @@ brew "ripgrep"
 brew "ripgrep-all"
 brew "tfenv"
 brew "tig"
+brew "tmux"
 brew "tree"
 brew "w3m"
 brew "wget"
 brew "zsh"
 brew "xwmx/taps/nb"
 cask "google-cloud-sdk"
+cask "alacritty"
+cask "font-meslo-lg-nerd-font"
