--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -14,10 +14,12 @@ set-option -g focus-events on
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# https://github.com/dracula/tmux
 set -g @plugin 'dracula/tmux'
 
 # dracula settings
-set -g @dracula-plugins "battery weather time"
+set -g @dracula-plugins "cpu-usage git weather time"
 set -g @dracula-show-powerline true
 set -g @dracula-military-time true
 
