Changes to tmux theme vim spacebar ssh yabai brew

--- a/dot_config/brewfile/Brewfile
+++ b/dot_config/brewfile/Brewfile
@@ -17,17 +17,18 @@ brew "gnupg"
 brew "go"
 brew "gopls"
 brew "grep"
+brew "htop"
 brew "hyperkit"
+brew "java"
+brew "jdtls"
 brew "jq"
 brew "libffi"
 brew "libyaml"
+brew "lua-language-server"
 brew "nb"
 brew "nmap"
-brew "openjdk"
 brew "pandoc"
 brew "podman"
-brew "pyenv"
-brew "rbenv"
 brew "readline"
 brew "ripgrep"
 brew "ripgrep-all"
@@ -39,6 +40,7 @@ brew "w3m"
 brew "wget"
 brew "zlib"
 brew "zsh"
+brew "cmacrae/formulae/spacebar"
 brew "koekeishiya/formulae/skhd"
 brew "koekeishiya/formulae/yabai"
 cask "google-cloud-sdk"
