--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -1,5 +1,11 @@
 # server options
 set-option -gs default-terminal "screen-256color"
+
+# Change prefix key to C-a
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
 # FYI: check for true color support using tmux info | ag Tc and verify using true-color-support
 # Enable True Color and RGB support
 set-option -gas terminal-overrides "*:Tc"
