--- a/dot_config/alacritty/alacritty.yml
+++ b/dot_config/alacritty/alacritty.yml
@@ -1,4 +1,4 @@
-# Configuration for Alacritty, the GPU enhanced terminal emulator.
+#Configuration for Alacritty, the GPU enhanced terminal emulator.
 
 # Import additional configuration files
 #
@@ -8,20 +8,20 @@
 #
 # All imports must either be absolute paths starting with `/`, or paths relative
 # to the user's home directory starting with `~/`.
-#import:
-#  - /path/to/alacritty.yml
+import:
+  - ~/.dracula_pro/themes/alacrittydracula-pro.yml
 
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
 # set by alacritty itself.
-env:
+#env:
   # TERM variable
   #
   # This value is used to set the `$TERM` environment variable for
   # each instance of Alacritty. If it is not present, alacritty will
   # check the local terminfo database and use `alacritty` if it is
   # available, otherwise `xterm-256color` is used.
-  TERM: alacritty
+  #  TERM: alacritty
 
 window:
   # Window dimensions (changes require restart)
@@ -65,7 +65,7 @@ window:
 
   # Window opacity as a floating point number from `0.0` to `1.0`.
   # The value `0.0` is completely transparent and `1.0` is opaque.
-  opacity: 0.8
+  opacity: 0.9
 
   # Startup Mode (changes require restart)
   #
@@ -76,7 +76,7 @@ window:
   #
   # Values for `startup_mode` (macOS only):
   #   - SimpleFullscreen
-  startup_mode: Maximized
+  startup_mode: Windowed
 
   # Window title
   #title: Alacritty
@@ -108,22 +108,26 @@ scrolling:
 # Font configuration (changes require restart)
 font:
   normal:
-    family: MesloLGM Nerd Font
+    #family: MesloLGM Nerd Font
+    family: MesloLGS NF
     #family: FuraCode Nerd Font
-    style: Retina,Regular
+    style: Regular
   bold:
-    family: MesloLGM Nerd Font
+    #family: MesloLGM Nerd Font
+    family: MesloLGS NF
     #family: FuraCode Nerd Font
     style: Bold
   italic:
-   family: MesloLGM Nerd Font
-   style: Italic
+    #family: MesloLGM Nerd Font
+    family: MesloLGS NF
+    style: Italic
   bold_italic:
-   family: MesloLGM Nerd Font
-   style: Bold Italic
-   
+    #family: MesloLGM Nerd Font
+    family: MesloLGS NF
+    style: Bold Italic
+
   # Point size
-  size: 9.0
+  size: 14.0
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
@@ -149,11 +153,11 @@ font:
 draw_bold_text_with_bright_colors: true
 
 # Colors (Tomorrow Night Bright)
-colors:
+#colors:
   # Default colors
-  primary:
-    background: '0x000000'
-    foreground: '0xeaeaea'
+  #primary:
+    #background: '0x000000'
+    #foreground: '0xeaeaea'
 
     # Bright and dim foreground colors
     #
@@ -240,26 +244,26 @@ colors:
   #  background: CellForeground
 
   # Normal colors
-  normal:
-    black:   '0x000000'
-    red:     '0xd54e53'
-    green:   '0xb9ca4a'
-    yellow:  '0xe6c547'
-    blue:    '0x7aa6da'
-    magenta: '0xc397d8'
-    cyan:    '0x70c0ba'
-    white:   '0xeaeaea'
+  #normal:
+    # black:   '0x000000'
+    # red:     '0xd54e53'
+    # green:   '0xb9ca4a'
+    # yellow:  '0xe6c547'
+    # blue:    '0x7aa6da'
+    # magenta: '0xc397d8'
+    # cyan:    '0x70c0ba'
+    # white:   '0xeaeaea'
 
   # Bright colors
-  bright:
-    black:   '0x666666'
-    red:     '0xff3334'
-    green:   '0x9ec400'
-    yellow:  '0xe7c547'
-    blue:    '0x7aa6da'
-    magenta: '0xb77ee0'
-    cyan:    '0x54ced6'
-    white:   '0xffffff'
+  #bright:
+    # black:   '0x666666'
+    # red:     '0xff3334'
+    # green:   '0x9ec400'
+    # yellow:  '0xe7c547'
+    # blue:    '0x7aa6da'
+    # magenta: '0xb77ee0'
+    # cyan:    '0x54ced6'
+    # white:   '0xffffff'
 
   # Dim colors
   #
@@ -288,7 +292,7 @@ colors:
 # Bell
 #
 # The bell is rung every time the BEL control character is received.
-#bell:
+bell:
   # Visual Bell Animation
   #
   # Animation effect for flashing the screen when the visual bell is rung.
