--- a/dot_config/brewfile/Brewfile
+++ b/dot_config/brewfile/Brewfile
@@ -33,10 +33,10 @@ brew "readline"
 brew "ripgrep"
 brew "ripgrep-all"
 brew "rust"
+brew "stow"
 brew "tig"
 brew "tmux"
 brew "tree"
-brew "stow"
 brew "w3m"
 brew "wget"
 brew "zlib"
@@ -44,6 +44,7 @@ brew "zsh"
 brew "cmacrae/formulae/spacebar"
 brew "koekeishiya/formulae/skhd"
 brew "koekeishiya/formulae/yabai"
+brew "universal-ctags/universal-ctags/universal-ctags", args: ["HEAD"]
 cask "google-cloud-sdk"
 cask "alacritty"
 cask "font-meslo-lg-nerd-font"
