move polybar config, and cleanup alacritty config

--- a/dot_config/polybar/config.ini
+++ b/dot_config/polybar/config.ini
@@ -22,7 +22,7 @@ border-color = #000
 
 
 [base]
-font-0 = "FuraCode Nerd Font:style=Retina,Regular:size=12:antialias=true:monospace=false;2"
+font-0 = "MesloLGM Nerd Font:style=Retina,Regular:size=12:antialias=true:monospace=false;2"
 font-1 = "Noto Color Emoji:scale=9;0"
 dpi = -1
 width = 100%
@@ -30,7 +30,6 @@ height = ${env:POLYBAR_HEIGHT:40}
 background = ${colors.background}
 foreground = ${colors.foreground}
 line-size = 4
-line-color = ${colors.line-color}
 border-size = 0
 border-color = ${colors.border-color}
 
@@ -297,7 +296,7 @@ format-full-prefix = " "
 format-full-prefix-foreground = ${colors.foreground-alt}
 format-full-underline = ${self.format-charging-underline}
 
-ramp-capacity-0 =  
+ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 = 
 ramp-capacity-3 = 
