add neovim to brew bundle and ignore asdf local

--- a/dot_config/brewfile/Brewfile
+++ b/dot_config/brewfile/Brewfile
@@ -27,6 +27,7 @@ brew "libyaml"
 brew "lua-language-server"
 brew "nb"
 brew "nmap"
+brew "neovim", args: ['HEAD']
 brew "pandoc"
 brew "podman"
 brew "readline"
