add dbt https://docs.getdbt.com/

--- a/dot_config/brewfile/Brewfile
+++ b/dot_config/brewfile/Brewfile
@@ -46,6 +46,7 @@ brew "zsh"
 brew "cmacrae/formulae/spacebar"
 brew "koekeishiya/formulae/skhd"
 brew "koekeishiya/formulae/yabai"
+cask "dbt-labs/dbt"
 cask "google-cloud-sdk"
 cask "alacritty"
 cask "font-meslo-lg-nerd-font"
