fix dbt brewfile

--- a/dot_config/brewfile/Brewfile
+++ b/dot_config/brewfile/Brewfile
@@ -1,6 +1,7 @@
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
+tap "dbt-labs/dbt"
 tap "koekeishiya/formulae"
 tap "xwmx/taps"
 brew "ack"
@@ -11,6 +12,7 @@ brew "azure-cli"
 brew "bat"
 brew "bazelisk"
 brew "catimg"
+brew "dbt-bigquery"
 brew "direnv"
 brew "exa"
 brew "git-extras"
@@ -46,7 +48,6 @@ brew "zsh"
 brew "cmacrae/formulae/spacebar"
 brew "koekeishiya/formulae/skhd"
 brew "koekeishiya/formulae/yabai"
-cask "dbt-labs/dbt"
 cask "google-cloud-sdk"
 cask "alacritty"
 cask "font-meslo-lg-nerd-font"
