Various minor updates

--- a/.luarc.json
+++ b/.luarc.json
@@ -4,5 +4,45 @@
         "vim",
         "require",
         "use"
+    ],
+    "workspace.library": [
+        "/Users/nathan/.config/nvim",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/vim-bazel",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/vim-maktaba",
+        "/Users/nathan/.local/share/nvim/site",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/cmp-buffer",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/cmp-nvim-lsp",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/cmp_luasnip",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/copilot.vim",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/gruvbox",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/lspkind-nvim",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/LuaSnip",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/lush.nvim",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/mason-lspconfig.nvim",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/mason.nvim",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/neogit",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/night-owl.vim",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/null-ls.nvim",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/nvim-cmp",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/nvim-jdtls",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/nvim-lspconfig",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/nvim-treesitter",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/nvim-treesitter-context",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/nvim-web-devicons",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/packer.nvim",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/pink-panic.nvim",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/plenary.nvim",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/schemastore.nvim",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/symbols-outline.nvim",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/telescope.nvim",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/tokyonight.nvim",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/vim-prettier",
+        "/opt/homebrew/Cellar/neovim/HEAD-e1f03c4/share/nvim/runtime",
+        "/opt/homebrew/Cellar/neovim/HEAD-e1f03c4/share/nvim/runtime/pack/dist/opt/matchit",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/cmp-buffer/after",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/cmp-nvim-lsp/after",
+        "/Users/nathan/.local/share/nvim/site/pack/packer/start/cmp_luasnip/after",
+        "/Users/nathan/.config/nvim/after",
+        "${3rd}/luassert/library"
     ]
 }
