Set window mode keys in tmux to vi

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -1,6 +1,9 @@
 # server options
 set-option -gs default-terminal "screen-256color"
 
+# window options
+set-option -gw mode-keys vi
+
 # Change prefix key to C-a
 unbind C-b
 set-option -g prefix C-a
