Add vscode to brewfile

--- a/dot_config/brewfile/Brewfile
+++ b/dot_config/brewfile/Brewfile
@@ -48,6 +48,7 @@ brew "zsh"
 brew "cmacrae/formulae/spacebar"
 brew "koekeishiya/formulae/skhd"
 brew "koekeishiya/formulae/yabai"
-cask "google-cloud-sdk"
 cask "alacritty"
 cask "font-meslo-lg-nerd-font"
+cask "google-cloud-sdk"
+cask "visual-studio-code"
