Some minor tmux improvments

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -1,13 +1,11 @@
 # server options
 set-option -gs default-terminal "screen-256color"
 
-# window options
-set-option -gw mode-keys vi
-
 # Change prefix key to C-a
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
+set -g base-index 1
 
 # FYI: check for true color support using tmux info | ag Tc and verify using true-color-support
 # Enable True Color and RGB support
@@ -20,6 +18,16 @@ set-option -gas terminal-overrides '*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256
 set-option -sg escape-time 10
 set-option -g focus-events on
 
+# window options
+set-option -gw mode-keys vi
+
+# vim-like pane switching
+bind -r ^ last-window
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
+
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -31,6 +39,7 @@ set -g @plugin 'dracula/tmux'
 set -g @dracula-plugins "cpu-usage git weather time"
 set -g @dracula-show-powerline true
 set -g @dracula-military-time true
+set -g @dracula-show-left-icon session
 
 # Auto install tpm
 if "test ! -d ~/.tmux/plugins/tpm" \
