--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -175,7 +175,7 @@ bind = ALT, Print, exec, grimblast --notify --cursor copysave screen
 # █░▀░█ █ ▄█ █▄▄
 bind = SUPER SHIFT, X, exec, hyprpicker -a -n
 bind = CTRL ALT, L, exec, swaylock
-bind = SUPER, Return, exec, kitty
+bind = SUPER, Return, exec, wezterm -e tmux
 bind = SUPER, E, exec, thunar
 bind = SUPER, Space, exec, killall rofi || rofi -show drun -theme ~/.config/rofi/global/rofi.rasi
 bind = SUPER, period, exec, killall rofi || rofi -show emoji -emoji-format "{emoji}" -modi emoji -theme ~/.config/rofi/global/emoji
