--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -4,6 +4,7 @@ exec-once = wl-clipboard-history -t
 exec-once = ~/.config/hypr/xdg-portal-hyprland
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+# exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = wlsunset -S 9:00 -s 19:30
 exec = swaybg -m fill -i ~/.wallpapers/the-sands-of-scheveningen-ultra-hd.jpg
@@ -11,7 +12,7 @@ exec-once = waybar --log-level=INFO &> ~/.log/waybar.log
 
 # █▀▄▀█ █▀█ █▄░█ █ ▀█▀ █▀█ █▀█
 # █░▀░█ █▄█ █░▀█ █ ░█░ █▄█ █▀▄
-monitor=eDP-1,2560x1440@60,0x0,2
+monitor=,preferred,auto,1
 
 # █ █▄░█ █▀█ █░█ ▀█▀
 # █ █░▀█ █▀▀ █▄█ ░█░
