--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -87,7 +87,7 @@
     "spacing": 10
   },
   "clock": {
-    "format": "{: %R   %d/%m}",
+    "format": " {:%R   %m/%d}",
     "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
   },
   "backlight": {
