--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -17,7 +17,6 @@
   "modules-right": [
     "tray",
     "custom/updates",
-    "custom/language",
     "battery",
     "network",
     "bluetooth",
@@ -34,18 +33,18 @@
     "format-icons": {
       "1": "",
       "2": "",
-      "3": "",
-      "4": "",
-      "5": "",
+      "3": "󰋉",
+      "4": "󰍫",
+      "5": "",
+      "6": "",
       "urgent": "",
-      "active": "",
       "default": ""
     },
     "sort-by-number": true
   },
   "network": {
-    "interface": "wlan0",
-    "on-click": "iwgtk",
+    "interface": "wlp1s0",
+    "on-click": "nm-connection-editor",
     "format": "{ifname}",
     "format-wifi": "",
     "format-ethernet": "󰈁",
@@ -58,7 +57,7 @@
   },
   "bluetooth": {
     "on-click": "~/.local/bin/toggleBluetooth.sh",
-    "on-click-right": "blueberry",
+    "on-click-right": "blueman-manager",
     "format": "󰂲",
     "format-on": "󰂯",
     "format-connected": "󰂱",
@@ -94,9 +93,9 @@
     "device": "intel_backlight",
     "format": "{icon} {percent}%",
     "format-icons": [
-      "",
-      "",
-      ""
+      "󰃞",
+      "󰃟",
+      "󰃠"
     ],
     "on-scroll-up": "brightnessctl set 1%+",
     "on-scroll-down": "brightnessctl set 1%-",
@@ -113,17 +112,11 @@
     "format-plugged": " {capacity}%",
     "format-alt": "{time} {icon}",
     "format-icons": [
-      "",
-      "",
-      "",
-      "",
-      "",
-      "",
-      "",
-      "",
-      "",
-      "",
-      ""
+      "",
+      "",
+      "",
+      "",
+      ""
     ]
   },
   "pulseaudio": {
@@ -150,8 +143,8 @@
   },
   "pulseaudio#microphone": {
     "format": "{format_source}",
-    "format-source": " {volume}%",
-    "format-source-muted": " Muted",
+    "format-source": " {volume}%",
+    "format-source-muted": " Muted",
     "on-click": "pamixer --default-source -t",
     "on-scroll-up": "pamixer --default-source -i 5",
     "on-scroll-down": "pamixer --default-source -d 5",
