Various changes that piled up (hyprland, swayidle swaylock, ssh)

--- a/dot_config/swaylock/config
+++ b/dot_config/swaylock/config
@@ -1,10 +1,8 @@
 daemonize
 show-failed-attempts
-clock
-effect-blur=5x5
-color=1f1d2e80
+color=1f1d2e
 font="Inter"
-indicator
+indicator-caps-lock
 indicator-radius=200
 indicator-thickness=20
 line-color=1f1d2e
@@ -27,9 +25,4 @@ ring-clear-color=9ccfd8
 line-clear-color=1f1d2e
 line-wrong-color=1f1d2e
 bs-hl-color=31748f
-grace=2
-grace-no-mouse
-grace-no-touch
-datestr="%d.%m"
-fade-in="0.1"
 ignore-empty-password
