--- a/dot_config/polybar/config.ini
+++ b/dot_config/polybar/config.ini
@@ -22,7 +22,7 @@ border-color = #000
 
 
 [base]
-font-0 = "MesloLGM Nerd Font:style=Retina,Regular:size=12:antialias=true:monospace=false;2"
+font-0 = "FiraMono Nerd Font:style=Retina,Regular:size=12:antialias=true:monospace=false;2"
 font-1 = "Noto Color Emoji:scale=9;0"
 dpi = -1
 width = 100%
@@ -67,7 +67,7 @@ tray-padding = 2
 tray-max-size = 24
 
 [bar/laptop]
-monitor = eDP-1
+monitor = eDP
 inherit = base
 
 modules-left = bspwm
@@ -101,10 +101,11 @@ type = internal/bspwm
 
 ws-icon-0 = code;
 ws-icon-1 = chrome;
-ws-icon-2 = slack;
+ws-icon-2 = chat;󰋉
 ws-icon-3 = personal;
 ws-icon-4 = terminal;
 ws-icon-5 = music;
+ws-icon-6 = camera;
 ws-icon-default = 
 
 label-focused = %icon%
@@ -282,7 +283,7 @@ bar-volume-empty-foreground = ${colors.foreground-alt}
 
 [module/battery]
 type = internal/battery
-battery = BAT0
+battery = BAT1
 adapter = AC
 full-at = 98
 
