Improve tmux config

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -1,48 +1,81 @@
-# server options
-set-option -gs default-terminal "screen-256color"
+########## General Settings ##########
 
-# Change prefix key to C-a
-unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+# Allow both `C-a` and `C-b` as prefixes
+set -g prefix2 C-a                        # GNU-Screen compatible prefix
+bind C-a send-prefix -2
+
+# Set window numbering to start at 1
 set -g base-index 1
 
-# FYI: check for true color support using tmux info | ag Tc and verify using true-color-support
 # Enable True Color and RGB support
+# FYI: Check for true color support using `tmux info | grep Tc` and verify using `true-color-support`
 set-option -gas terminal-overrides "*:Tc"
 set-option -gas terminal-overrides "*:RGB"
-# Enable double/curly underline
+
+# Enable double/curly underline (complex option)
+# These terminal overrides ensure underline customization support if your terminal allows it
 set-option -gas terminal-overrides '*:Smulx=\E[4::%p1%dm'
 set-option -gas terminal-overrides '*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
-# Other settings
+
+# Reduce escape time for faster command input response
 set-option -sg escape-time 10
-set-option -g focus-events on
 
-# window options
-set-option -gw mode-keys vi
+# Enable focus events
+# This allows applications within Tmux to detect when the window gains or loses focus
+set -g focus-events on
 
-# vim-like pane switching
-bind -r ^ last-window
+
+########## Performance Tweaks ##########
+
+# Increase history limit for better scrollback performance
+set -g history-limit 10000
+
+# Enable aggressive resizing of panes for faster redrawing
+set-option -g aggressive-resize on
+
+# Lower the display-time of messages to reduce delay
+set-option -g display-time 750
+
+# Enable mouse support (if preferred)
+# Uncomment to enable mouse-based navigation of panes and windows
+# set -g mouse on
+
+
+########## Key Bindings ##########
+
+# Vim-like pane navigation
 bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 
-# plugins
+# Quickly switch back to the last window
+bind -r ^ last-window
+
+
+########## Plugin Management ##########
+
+# Tmux Plugin Manager (TPM)
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
-# https://github.com/dracula/tmux
+# Dracula theme with custom settings
 set -g @plugin 'dracula/tmux'
-
-# dracula settings
 set -g @dracula-plugins "cpu-usage git weather time"
 set -g @dracula-show-powerline true
 set -g @dracula-military-time true
 set -g @dracula-show-left-icon session
 
-# Auto install tpm
+# Auto install TPM (improved)
+# Check if TPM is installed, and install if it's missing
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
+# Run TPM (Tmux Plugin Manager)
 run '~/.tmux/plugins/tpm/tpm'
+
+########## Window Options ##########
+
+# Enable Vim-style keys for copy mode
+set-option -gw mode-keys vi
+
