--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -1,2 +1,14 @@
 [tools]
+deno = "latest"
+direnv = "latest"
+go = "latest"
+java = "latest"
+julia = "latest"
+lua = "latest"
+node = "latest"
+ocaml = "latest"
 perl = "latest"
+php = "latest"
+pnpm = "latest"
+python = "system"
+yarn = "latest"
